--- a/257. Binary Tree Paths.ipynb
+++ b/257. Binary Tree Paths.ipynb
@@ -65,6 +65,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "path 用 list 存 (避免了每次遞迴都創建新的字符串，消耗存儲空間)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -74,7 +81,7 @@
     "\n",
     "class Solution:\n",
     "    def binaryTreePaths(self, root: Optional[TreeNode]) -> List[str]:\n",
-    "        # print(f\"{root=}\")\n",
+    "        print(f\"{root=}\")\n",
     "\n",
     "        # 定義遞迴函數進行深度優先搜索 (DFS)\n",
     "        def dfs(node, path):\n",
@@ -82,21 +89,23 @@
     "                return\n",
     "            \n",
     "            # 將當前節點的值加入到路徑字串中\n",
-    "            path += str(node.val)\n",
-    "            # print(f\"{path=}\")\n",
+    "            path.append(str(node.val))\n",
+    "            print(f\"append: {path=}\")\n",
     "            \n",
     "            # 如果當前節點是葉子節點（左右子節點皆為 None），將完整路徑加入結果列表中\n",
     "            if not node.left and not node.right:                \n",
-    "                result.append(path)\n",
-    "                # print(f\"{result=}\\n\")\n",
+    "                result.append(\"->\".join(path))  # 將路徑中的節點值用\"->\"連接起來\n",
+    "                print(f\"{result=}\\n\")\n",
+    "            else:            \n",
+    "                # 如果不是葉子節點，繼續處理子節點            \n",
+    "                dfs(node.left, path)  # 遞迴處理左子樹\n",
+    "                dfs(node.right, path)  # 遞迴處理右子樹\n",
     "            \n",
-    "            # 如果不是葉子節點，繼續處理子節點            \n",
-    "            path += \"->\" # 加上 \"->\" 表示路徑中的下一個節點\n",
-    "            dfs(node.left, path)  # 遞迴處理左子樹\n",
-    "            dfs(node.right, path)  # 遞迴處理右子樹\n",
+    "            path.pop() # 回溯，撤銷選擇，將當前節點從路徑中移除\n",
+    "            print(f\"pop: {path=}\")\n",
     "        \n",
     "        result = [] # 存儲所有的根到葉子的路徑\n",
-    "        dfs(root, \"\")  # 從根節點開始執行遞迴 # time: O(n) 遍歷所有節點\n",
+    "        dfs(node = root, path = [])  # 從根節點開始執行遞迴 # time: O(n) 遍歷所有節點\n",
     "\n",
     "        return result\n"
    ]
@@ -110,6 +119,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "root=<__main__.TreeNode object at 0x000001BA3BBCC8D0>\n",
+      "append: path=['1']\n",
+      "append: path=['1', '2']\n",
+      "append: path=['1', '2', '5']\n",
+      "result=['1->2->5']\n",
+      "\n",
+      "pop: path=['1', '2']\n",
+      "pop: path=['1']\n",
+      "append: path=['1', '3']\n",
+      "result=['1->2->5', '1->3']\n",
+      "\n",
+      "pop: path=['1']\n",
+      "pop: path=[]\n",
       "['1->2->5', '1->3']\n"
      ]
     }
@@ -123,6 +145,89 @@
     "\n",
     "print(Solution().binaryTreePaths(root))  # [\"1->2->5\", \"1->3\"]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "path 用 string 存 (較直觀)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Optional\n",
+    "\n",
+    "class Solution:\n",
+    "    def binaryTreePaths(self, root: Optional[TreeNode]) -> List[str]:\n",
+    "        print(f\"{root=}\")\n",
+    "\n",
+    "        # 定義遞迴函數進行深度優先搜索 (DFS)\n",
+    "        def dfs(node, path):\n",
+    "            if not node:  # 如果當前節點為空，直接返回\n",
+    "                return\n",
+    "            \n",
+    "            # 將當前節點的值加入到路徑字串中\n",
+    "            path += str(node.val)\n",
+    "            print(f\"{path=}\")\n",
+    "            \n",
+    "            # 如果當前節點是葉子節點（左右子節點皆為 None），將完整路徑加入結果列表中\n",
+    "            if not node.left and not node.right:                \n",
+    "                result.append(path)\n",
+    "                print(f\"{result=}\\n\")\n",
+    "            \n",
+    "            # 如果不是葉子節點，繼續處理子節點            \n",
+    "            path += \"->\" # 加上 \"->\" 表示路徑中的下一個節點\n",
+    "            dfs(node.left, path)  # 遞迴處理左子樹\n",
+    "            dfs(node.right, path)  # 遞迴處理右子樹\n",
+    "        \n",
+    "        result = [] # 存儲所有的根到葉子的路徑\n",
+    "        dfs(node = root, path = \"\")  # 從根節點開始執行遞迴 # time: O(n) 遍歷所有節點\n",
+    "\n",
+    "        return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root=<__main__.TreeNode object at 0x000001BA3BBC8090>\n",
+      "path='1'\n",
+      "path='1->2'\n",
+      "path='1->2->5'\n",
+      "result=['1->2->5']\n",
+      "\n",
+      "path='1->3'\n",
+      "result=['1->2->5', '1->3']\n",
+      "\n",
+      "['1->2->5', '1->3']\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = TreeNode(1)\n",
+    "root.left = TreeNode(2)\n",
+    "root.right = TreeNode(3)\n",
+    "root.left.right = TreeNode(5)\n",
+    "# root = [1, 2, 3, None, 5]\n",
+    "\n",
+    "print(Solution().binaryTreePaths(root))  # [\"1->2->5\", \"1->3\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
