--- a/124. Binary Tree Maximum Path Sum.ipynb
+++ b/124. Binary Tree Maximum Path Sum.ipynb
@@ -8,6 +8,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O( n )$**  \n",
+    "**空間複雜度: $O( H )$**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -61,7 +69,29 @@
     "            right = None\n",
     "            ),\n",
     "        ))\n",
-    "# root = [10,9,20,None,None,15,7] # 54"
+    "# root = [10,9,20,None,None,15,7] # 54\n",
+    "\n",
+    "root = TreeNode(\n",
+    "    val = 10,\n",
+    "    left = TreeNode(\n",
+    "        val = 9, \n",
+    "        left = None, \n",
+    "        right = None \n",
+    "        ), \n",
+    "    right = TreeNode(\n",
+    "        val = 20, \n",
+    "        left = TreeNode(\n",
+    "            val = -15, \n",
+    "            left = None, \n",
+    "            right = None\n",
+    "            ), \n",
+    "        right = TreeNode(\n",
+    "            val = 7, \n",
+    "            left = None, \n",
+    "            right = None\n",
+    "            ),\n",
+    "        ))\n",
+    "# root = [10,9,20,None,None,-15,7] # 46"
    ]
   },
   {
@@ -70,33 +100,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Optional\n",
+    "\n",
     "class Solution:\n",
-    "    def __init__(self):\n",
-    "        self.maxSum = float('-inf')  # 初始化最大總和為負無窮小\n",
+    "    def maxPathSum(self, root: Optional[TreeNode]) -> int:\n",
+    "        # PostOrder_dfs: 後序遍歷 + 深度優先搜尋 (Depth First Search)，left -> right -> root\n",
+    "        def PostOrder_dfs(node): # time: O(n), space: O(H)，n 為節點數，H 為樹的高度\n",
+    "            # 如果當前節點為空，返回0\n",
+    "            if not node:\n",
+    "                return 0\n",
     "\n",
-    "    def maxPathSum(self, root):\n",
-    "        self.depth(root)  # 呼叫遞迴函式進行樹的遍歷\n",
-    "        return self.maxSum  # 回傳最大總和\n",
+    "            # 遍歷左子樹\n",
+    "            print(f\"left -> {node=}\")\n",
+    "            left = PostOrder_dfs(node.left)\n",
+    "            print(f\"{left=}\")\n",
     "\n",
-    "    def depth(self, node):\n",
-    "        left_val = node.left.val if node.left else None\n",
-    "        right_val = node.right.val if node.right else None\n",
-    "        print(f\"node = {node.val}, node.left = {left_val}, node.right = {right_val}\")\n",
+    "            # 遍歷右子樹\n",
+    "            print(f\"right -> {node=}\")\n",
+    "            right = PostOrder_dfs(node.right)\n",
+    "            print(f\"{right=}\")\n",
     "\n",
-    "        left = self.depth(node.left) if node.left else 0  # 遞迴左子樹\n",
-    "        print(f\"{node.val} - left  =  {left}\")\n",
-    "\n",
-    "        right = self.depth(node.right) if node.right else 0  # 遞迴右子樹\n",
-    "        print(f\"{node.val} - right =  {right}\")\n",
-    "\n",
-    "        # 更新最大總和，考慮四種情況：1. 僅包含當前節點 2. 包含當前節點和左子樹 3. 包含當前節點和右子樹 4. 包含當前節點、左子樹和右子樹\n",
-    "        print(f\"node_max: ({self.maxSum}, {node.val}, {node.val + left}, {node.val + right}, {node.val + left + right})\")\n",
-    "        self.maxSum = max(self.maxSum, node.val, node.val + left, node.val + right, node.val + left + right)\n",
-    "        print(f\"maxSum = {self.maxSum}\")\n",
+    "            # 計算左子樹和右子樹的最大值（至少為0，避免貢獻負值）\n",
+    "            left_max = max(left, 0)\n",
+    "            right_max = max(right, 0)\n",
+    "            print(f\"left_max=max({left}, 0)={left_max}\")\n",
+    "            print(f\"right_max=max({right}, 0)={right_max}\")\n",
     "        \n",
-    "        # 回傳包含當前節點的最大總和，只考慮三種情況： 1. 僅包含當前節點 2. 包含當前節點和左子樹 3. 包含當前節點和右子樹\n",
-    "        print(f\"return_max: ({node.val}, {node.val + left}, {node.val + right})\")\n",
-    "        return max(node.val, node.val + left, node.val + right)  "
+    "            # 計算通過當前節點的路徑和（包含當前節點及左、右子樹的值）\n",
+    "            current_sum = node.val + left_max + right_max\n",
+    "            print(f\"current_sum=({node.val=} + {left_max=} + {right_max=})={current_sum}\")\n",
+    "            \n",
+    "            # 更新全局最大路徑和 (當前節點的路徑和與全局最大路徑和取最大值)\n",
+    "            print(f\"max_sum=max({self.max_sum=}, {current_sum=})={max(self.max_sum, current_sum)}\")\n",
+    "            self.max_sum = max(self.max_sum, current_sum)\n",
+    "\n",
+    "            # 返回包含當前節點的最大單向路徑和 (左右子樹中選擇一條最大的路徑)\n",
+    "            max_one_way = node.val + max(left_max, right_max)\n",
+    "            print(f\"max_one_way=({node.val=} + max({left_max=}, {right_max=}))={max_one_way}\\n\")\n",
+    "\n",
+    "            return max_one_way\n",
+    "            \n",
+    "        self.max_sum = float(\"-inf\") # 初始化全局最大路徑和為負無窮\n",
+    "        PostOrder_dfs(root) # 遍歷整棵樹\n",
+    "\n",
+    "        return self.max_sum\n"
    ]
   },
   {
@@ -108,42 +155,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "node = 10, node.left = 9, node.right = 20\n",
-      "node = 9, node.left = None, node.right = None\n",
-      "9 - left  =  0\n",
-      "9 - right =  0\n",
-      "node_max: (-inf, 9, 9, 9, 9)\n",
-      "maxSum = 9\n",
-      "return_max: (9, 9, 9)\n",
-      "10 - left  =  9\n",
-      "node = 20, node.left = 15, node.right = 7\n",
-      "node = 15, node.left = None, node.right = None\n",
-      "15 - left  =  0\n",
-      "15 - right =  0\n",
-      "node_max: (9, 15, 15, 15, 15)\n",
-      "maxSum = 15\n",
-      "return_max: (15, 15, 15)\n",
-      "20 - left  =  15\n",
-      "node = 7, node.left = None, node.right = None\n",
-      "7 - left  =  0\n",
-      "7 - right =  0\n",
-      "node_max: (15, 7, 7, 7, 7)\n",
-      "maxSum = 15\n",
-      "return_max: (7, 7, 7)\n",
-      "20 - right =  7\n",
-      "node_max: (15, 20, 35, 27, 42)\n",
-      "maxSum = 42\n",
-      "return_max: (20, 35, 27)\n",
-      "10 - right =  35\n",
-      "node_max: (42, 10, 19, 45, 54)\n",
-      "maxSum = 54\n",
-      "return_max: (10, 19, 45)\n"
+      "left -> node=<__main__.TreeNode object at 0x7f4a2cac8710>\n",
+      "left -> node=<__main__.TreeNode object at 0x7f4a2cac3d90>\n",
+      "left=0\n",
+      "right -> node=<__main__.TreeNode object at 0x7f4a2cac3d90>\n",
+      "right=0\n",
+      "left_max=max(0, 0)=0\n",
+      "right_max=max(0, 0)=0\n",
+      "current_sum=(node.val=9 + left_max=0 + right_max=0)=9\n",
+      "max_sum=max(self.max_sum=-inf, current_sum=9)=9\n",
+      "max_one_way=(node.val=9 + max(left_max=0, right_max=0))=9\n",
+      "\n",
+      "left=9\n",
+      "right -> node=<__main__.TreeNode object at 0x7f4a2cac8710>\n",
+      "left -> node=<__main__.TreeNode object at 0x7f4a2cac88d0>\n",
+      "left -> node=<__main__.TreeNode object at 0x7f4a2cac3e90>\n",
+      "left=0\n",
+      "right -> node=<__main__.TreeNode object at 0x7f4a2cac3e90>\n",
+      "right=0\n",
+      "left_max=max(0, 0)=0\n",
+      "right_max=max(0, 0)=0\n",
+      "current_sum=(node.val=-15 + left_max=0 + right_max=0)=-15\n",
+      "max_sum=max(self.max_sum=9, current_sum=-15)=9\n",
+      "max_one_way=(node.val=-15 + max(left_max=0, right_max=0))=-15\n",
+      "\n",
+      "left=-15\n",
+      "right -> node=<__main__.TreeNode object at 0x7f4a2cac88d0>\n",
+      "left -> node=<__main__.TreeNode object at 0x7f4a2cac8c50>\n",
+      "left=0\n",
+      "right -> node=<__main__.TreeNode object at 0x7f4a2cac8c50>\n",
+      "right=0\n",
+      "left_max=max(0, 0)=0\n",
+      "right_max=max(0, 0)=0\n",
+      "current_sum=(node.val=7 + left_max=0 + right_max=0)=7\n",
+      "max_sum=max(self.max_sum=9, current_sum=7)=9\n",
+      "max_one_way=(node.val=7 + max(left_max=0, right_max=0))=7\n",
+      "\n",
+      "right=7\n",
+      "left_max=max(-15, 0)=0\n",
+      "right_max=max(7, 0)=7\n",
+      "current_sum=(node.val=20 + left_max=0 + right_max=7)=27\n",
+      "max_sum=max(self.max_sum=9, current_sum=27)=27\n",
+      "max_one_way=(node.val=20 + max(left_max=0, right_max=7))=27\n",
+      "\n",
+      "right=27\n",
+      "left_max=max(9, 0)=9\n",
+      "right_max=max(27, 0)=27\n",
+      "current_sum=(node.val=10 + left_max=9 + right_max=27)=46\n",
+      "max_sum=max(self.max_sum=27, current_sum=46)=46\n",
+      "max_one_way=(node.val=10 + max(left_max=9, right_max=27))=37\n",
+      "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "54"
+       "46"
       ]
      },
      "execution_count": 4,
@@ -172,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4
  },
