--- a/230. Kth Smallest Element in a BST.ipynb
+++ b/230. Kth Smallest Element in a BST.ipynb
@@ -107,14 +107,14 @@
     "\n",
     "class Solution:\n",
     "    def kthSmallest(self, root: Optional[TreeNode], k: int) -> int:\n",
-    "        # 中序遍歷: left -> root -> right，由小到大\n",
-    "        def inorder(node): # time: O(k), space: O(H)，只需遍歷 k 個節點，H 為樹的高度\n",
+    "        # InOrder_dfs：中序遍歷 + 深度優先搜索 (Depth First Search)，left -> root -> right\n",
+    "        def InOrder_dfs(node): # time: O(k), space: O(H)，只需遍歷 k 個節點，H 為樹的高度\n",
     "            # 如果節點為空，直接返回\n",
     "            if not node or self.result:\n",
     "                return\n",
     "            \n",
     "            print(f\"left: {node.left=}\\n\")\n",
-    "            inorder(node.left) # 遞迴遍歷左子樹\n",
+    "            InOrder_dfs(node.left) # 遞迴遍歷左子樹\n",
     "            self.count += 1 # 紀錄當前節點是第幾個被訪問的節點\n",
     "            print(f\"{self.count=}\")\n",
     "            if self.count == k: # 如果當前節點是第 k 個被訪問的節點\n",
@@ -125,12 +125,12 @@
     "\n",
     "            \n",
     "            print(f\"right: {node.right=}\")\n",
-    "            inorder(node.right) # 遞迴遍歷右子樹\n",
+    "            InOrder_dfs(node.right) # 遞迴遍歷右子樹\n",
     "        \n",
     "        print(f\"{k=}, {root=}\")\n",
     "        self.count = 0 # space: O(1)\n",
     "        self.result = None # space: O(1)\n",
-    "        inorder(root) # 調用中序遍歷函數\n",
+    "        InOrder_dfs(root) # 調用中序遍歷函數\n",
     "\n",
     "        return self.result"
    ]
