--- a/257. Binary Tree Paths.ipynb
+++ b/257. Binary Tree Paths.ipynb
@@ -83,8 +83,8 @@
     "    def binaryTreePaths(self, root: Optional[TreeNode]) -> List[str]:\n",
     "        print(f\"{root=}\")\n",
     "\n",
-    "        # 定義遞迴函數進行深度優先搜索 (DFS)\n",
-    "        def dfs(node, path):\n",
+    "        # PreOrder_dfs: 前序遍歷 + 深度優先搜索 (Depth First Search)，root -> left -> right\n",
+    "        def PreOrder_dfs(node, path):\n",
     "            if not node:  # 如果當前節點為空，直接返回\n",
     "                return\n",
     "            \n",
@@ -98,14 +98,14 @@
     "                print(f\"{result=}\\n\")\n",
     "            else:            \n",
     "                # 如果不是葉子節點，繼續處理子節點            \n",
-    "                dfs(node.left, path)  # 遞迴處理左子樹\n",
-    "                dfs(node.right, path)  # 遞迴處理右子樹\n",
+    "                PreOrder_dfs(node.left, path)  # 遞迴處理左子樹\n",
+    "                PreOrder_dfs(node.right, path)  # 遞迴處理右子樹\n",
     "            \n",
     "            path.pop() # 回溯，撤銷選擇，將當前節點從路徑中移除\n",
     "            print(f\"pop: {path=}\")\n",
     "        \n",
     "        result = [] # 存儲所有的根到葉子的路徑\n",
-    "        dfs(node = root, path = [])  # 從根節點開始執行遞迴 # time: O(n) 遍歷所有節點\n",
+    "        PreOrder_dfs(node = root, path = [])  # 從根節點開始執行遞迴 # time: O(n) 遍歷所有節點\n",
     "\n",
     "        return result\n"
    ]
